--- a/css/main-style.css
+++ b/css/main-style.css
@@ -4,23 +4,51 @@
     box-sizing: border-box;
 }
 
-/* Generics */
-ul {
-    list-style-type: none;
-}
-
-header {
-    background-color: #00018b;
-    height: 580px;
-}
-
 /* Header top */
 .header-top {
-    display: flex;
-    background-color: #add8e7;
+    /* DEBUG */
     height: 80px;
+    background-color: #add8e7;
 }
 
-.navbar {
+#logo {
+    width: 100px;
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+#main-nav {
     display: flex;
+    justify-content: center;
+    /* DEBUG */
+    background-color: #daa51e;
+}
+
+#main-nav ul {
+    list-style-type: none;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+#main-nav ul a {
+    text-decoration: none;
+    color: black;
+}
+
+#login {
+    display: flex;
+    justify-content: flex-end;
+    width: 100px;
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+/* Header bottom */
+.header-bottom {
+    /* DEBUG */
+    background-color: #00018b;
+    height: 500px;
 }
