--- a/css/main-style.css
+++ b/css/main-style.css
@@ -65,3 +65,28 @@
     /* DEBUG */
     background-color: #ef82ed;
 }
+
+/* Container main */
+.container-main {
+    margin: 40px auto;
+    width: 65%;
+}
+
+/* Main */
+.container-row {
+    display: flex;
+}
+
+.text-box {
+    height: 500px;
+    width: 60%;
+    /* DEBUG */
+    background-color: #1e90ff;
+}
+
+.img-box {
+    height: 500px;
+    width: 40%;
+    /* DEBUG */
+    background-color: #ffc0ca;
+}
