--- a/css/main-style.css
+++ b/css/main-style.css
@@ -101,8 +101,42 @@
 }
 
 /* Footer top */
-.footer-top {
-    height: 600px;
+footer {
     /* DEBUG */
     background-color: #23272a;
+}
+
+.footer-top {
+    display: flex;
+    justify-content: center;
+    height: 600px;
+    width: 65%;
+    margin: 0px auto;
+}
+
+.contacts {
+    width: 20%;
+    height: 400px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    /* DEBUG */
+    background-color: #f08180;
+}
+
+.cnt-blue {
+    display: flex;
+    width: 80%;
+    background-color: #20b3aa;
+}
+
+.useful-links {
+    width: 25%;
+    height: 400px;
+    /* DEBUG */
+    border-right: 1px solid white;
+}
+
+/* Footer bottom */
+.footer-bttom {
+    border-top: 1px solid white;
 }
