--- a/css/main-style.css
+++ b/css/main-style.css
@@ -10,6 +10,11 @@ button {
     padding: 5px 10px;
 }
 
+header {
+    /* DEBUG */
+    background-color: #00018b;
+}
+
 /* Header top */
 .header-top {
     display: flex;
@@ -44,7 +49,7 @@ button {
     width: 60%;
 }
 
-#main-nav ul a {
+#main-nav a {
     text-decoration: none;
     color: black;
 }
@@ -61,7 +66,6 @@ button {
     justify-content: center;
     align-items: center;
     /* DEBUG */
-    background-color: #00018b;
     height: 500px;
 }
 
