--- a/css/main-style.css
+++ b/css/main-style.css
@@ -75,16 +75,21 @@ header {
     background-color: #ef82ed;
 }
 
-/* Container main */
-.container-main {
-    margin: 40px auto;
-    width: 65%;
-}
-
 /* Main */
 .container-row {
     display: flex;
-    margin-bottom: 50px;
+    justify-content: center;
+    padding: 20px 0;
+    /* DEBUG */
+}
+
+.cr-grey {
+    background-color: #d1d1d1;
+}
+
+.container-element {
+    width: 65%;
+    display: flex;
 }
 
 .text-box {
@@ -102,6 +107,8 @@ header {
 }
 
 .mobile-apps {
+    width: 65%;
+    display: flex;
     /* DEBUG */
     height: 800px;
     background-color: green;
@@ -122,14 +129,14 @@ footer {
     justify-content: center;
     margin: 0px auto;
     width: 65%;
+    padding: 10px 0px 40px;
+    height: 450px;
 }
 
 .contacts {
     width: 20%;
-    margin-top: 10px;
-    margin-bottom: 40px;
     /* DEBUG */
-    height: 400px;
+    height: 100%;
     background-color: #f08180;
 }
 
@@ -142,7 +149,7 @@ footer {
 .useful-links {
     width: 25%;
     /* DEBUG */
-    height: 400px;
+    height: 100%;
     border-right: 1px solid white;
 }
 
@@ -152,8 +159,11 @@ footer {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-top: 30px;
-    padding: 20px 0px;
     /* DEBUG */
     background-color: cyan;
+}
+
+.ft-rw-cnt-bottom {
+    padding: 10px 0px;
+    height: 80px;
 }
